# Feature-extraction-C-

./: CMakeLists.txt  class.py  hue_histogram.hpp  main.cpp
